20170429		6.1.1
	- Add new "turbo" speed mode to get faster async transfers.
	- Fix scsi2sd-util6 size and sector-size inputs
	- Fix crash when configured scsi disk starting sector is less than
	SD card size

20170329		6.1.0
	- Enable synchronous transfers on SCSI1 hosts
	- Support 4MB/s sync transfers for Amiga A590 (WD33C93)
	- Merge v4.7 release changes, excluding custom mode/inquiry pages
	- various bug fixes

20161006		6.0.13
	- Fixed SCSI timing issue
	- Added glitch filter on SCSI signals.
	- Re-implemented SCSI parity checking.

20160912		6.0.10
	- Fixed write issue with UHS-I Speed Class 3 SD cards.
	- More stability bug fixes

20160827		6.0.8
	- Fixed "protocol error" issues when saving configuration to SD cards.
	- Synchronous transfers supported ! 5MB/s and 10MB/s supported.
	- Fix for accessing data via USB with more than 2 devices configured.

20160815		6.0.6
	- Fix performance bugs

20160814		6.05
	- More SCSI bug fixes (some timing issues resolved in the FPGA image)
	- Firmware update support using scsi2sd-util6.

20160716		6.03 (BETA3)
	- SCSI bug fixes.

20160616		6.01
	- Improved SD card compatibility
	- Fixed SCSI interfaces on slower SCSI controllers
	- Significant performance improvements
	- Added SD card hotswap support.

20160528		6.0
	- First BETA firmware for the 6.0 hardware version of the SCSI2SD.